# BluetoothBlinker

./: .gitignore  README.md
BluetoothBlinker-MCU/: Cargo.toml  jlink.gdb  jlinkgdbservercli.sh  memory.x  settings.jlink
BluetoothBlinker-MCU-c/: linker.ld  main.c  makefile
BluetoothBlinker-MCU-c/app/: app.c  app.h
BluetoothBlinker-MCU-c/ble/: ble.c  ble.h
BluetoothBlinker-MCU-c/cc26x0r2/driverlib/: ccfgread.h  chipinfo.c  chipinfo.h  crypto.c  driverlib_release.c  driverlib_release.h  (+16 more)
BluetoothBlinker-MCU-c/drivers/: template.c  template.h
BluetoothBlinker-MCU-c/mcu/: mcu.c  mcu.h
BluetoothBlinker-MCU-rust/: Cargo.toml  jlink.gdb  jlinkGDB.sh  memory.x
BluetoothBlinker-MCU-rust/.cargo/: config
BluetoothBlinker-MCU-rust/src/: config.rs  main.rs
BluetoothBlinker-MCU-rust/src/mcu/: gpio.rs  mod.rs
BluetoothBlinker-MCU/.cargo/: config
BluetoothBlinker-MCU/src/: main.rs
BluetoothBlinker-MCU/src/mcu/: gpio.rs  mod.rs  systick.rs
BluetoothBlinker-PCB/: BluetoothBlinker-PCB  BluetoothBlinker-PCB-cache.lib  BluetoothBlinker-PCB-rescue.lib  BluetoothBlinker-PCB.kicad_pcb  BluetoothBlinker-PCB.kicad_pcb-bak  BluetoothBlinker-PCB.pro  BluetoothBlinker-PCB.sch  BluetoothBlinker-PCB.sch-bak  BluetoothBlinker-PCB.xml  BluetoothBlinkerBOM.ods  fp-info-cache  sym-lib-table
BluetoothBlinker-PCB/Gerbers/: BluetoothBlinker-PCB-B_Cu.gbl  BluetoothBlinker-PCB-B_Mask.gbs  BluetoothBlinker-PCB-B_SilkS.gbo  BluetoothBlinker-PCB-Edge_Cuts.gm1  BluetoothBlinker-PCB-F_Cu.gtl  BluetoothBlinker-PCB-F_Mask.gts  BluetoothBlinker-PCB-F_SilkS.gto  BluetoothBlinker-PCB-PTH.drl
(+27 files in other folders)
