[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
name = "app"
version = "0.1.0"

[features]
device = []

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.7.0", features = ["device"] }
# cortex-m-semihosting = "0.3.7"
cc2640r2f_pac = { path = "/home/tayspen72/Projects/cc2640r2f_pac", version = "1.0.0", features = ["rt"] }
panic-halt = "0.2.0"
# panic-semihosting = "0.5.6"

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
