[package]
authors = ["Taylor Spencer <tayspen72@gmail.com>"]
edition = "2018"
name = "app"
version = "0.1.0"

[features]
device = []

[dependencies]
cortex-m = "0.7.2"
cortex-m-semihosting = "0.3.7"
heapless = "0.7.0"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"

[dependencies.cc2640r2f]
features = ["rt"]
git = "https://github.com/luojia65/cc2640r2f"
version = "0.0.0"

[dependencies.cortex-m-rt]
version = "0.6.13"
features = ["device"]

[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
